--- a/style/index.css
+++ b/style/index.css
@@ -1,10 +1,59 @@
+/* http://meyerweb.com/eric/tools/css/reset/ 
+   v2.0 | 20110126
+   License: none (public domain)
+*/
+
+html, body, div, span, applet, object, iframe,
+h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+a, abbr, acronym, address, big, cite, code,
+del, dfn, em, img, ins, kbd, q, s, samp,
+small, strike, strong, sub, sup, tt, var,
+b, u, i, center,
+dl, dt, dd, ol, ul, li,
+fieldset, form, label, legend,
+table, caption, tbody, tfoot, thead, tr, th, td,
+article, aside, canvas, details, embed, 
+figure, figcaption, footer, header, hgroup, 
+menu, nav, output, ruby, section, summary,
+time, mark, audio, video {
+	margin: 0;
+	padding: 0;
+	font-size: 100%;
+	font: inherit;
+	vertical-align: baseline;
+}
+/* HTML5 display-role reset for older browsers */
+article, aside, details, figcaption, figure, 
+footer, header, hgroup, menu, nav, section {
+	display: block;
+}
+
+ol, ul {
+	list-style: none;
+}
+blockquote, q {
+	quotes: none;
+}
+blockquote:before, blockquote:after,
+q:before, q:after {
+	content: '';
+	content: none;
+}
+table {
+	border-collapse: collapse;
+	border-spacing: 0;
+}
+
 /* Add CSS styling here */
 * {
-    
-    
+    /* border: 1px solid black; */
+}
+html {
+    font-size: 62.5%;
 }
 body {
     margin: 0;
+    font-size: 1.6rem;;
 }
 header {
     background-color: lightgrey;
@@ -12,27 +61,26 @@ header {
     height: 120px;
     display: flex;
     flex-flow: column nowrap;
-    justify-content: flex-start;
-    align-items: flex-start;
+    justify-content: space-around;
 }
 
 h1 {
-    margin-left: 10px;
+    margin-left: 2.5%;
+    font-size: 4rem;
 }
 
 nav {
-    margin-left: 15px;
-    margin-top: -15px;
-    padding-bottom: 5px;
+    margin-left: 3.5%;
     display: flex;
     align-items: center;
-    justify-content: flex-start;
     width:100%;
-    height:30px;
+    height:40px;
  }
 
- nav a {
+nav a {
+     width: 5%;
      text-decoration: none;
+     text-align: center;
      background-color: white;
      color: black;
      border: 1px solid black;;
@@ -40,34 +88,47 @@ nav {
  }
 
 .main {
-     width: 60%;
-     margin: 10px auto; 
- }
+    width: 60%;
+    margin: 10px auto; 
+}
 
 .top {
-    
+    width: 80%;
+    padding-left: 2.5%;
     display: flex;
     flex-flow: row nowrap;
-    justify-content: space-evenly;
+    justify-content: space-between;
+    align-items: flex-end;
 }
 
 .profile {
-    
+    background-image: url('https://picsum.photos/300/200');
+    background-repeat: no-repeat;
+    background-position: cover;
+    height: 200px;
 }
 
 .intro {
-    width: 40%;
-    margin-right: 5px;
+    width: 50%;
+    height: 180px;
+    display: flex;
+    flex-flow: column nowrap;
+    justify-content: space-around;
+    align-items: flex-start;
 }
 
- .preview {
+h2 {
+    font-size: 2.5rem;
+}
+
+.preview {
      display: flex;
-     justify-content: space-around;
+     justify-content: space-between;
      align-content: space-evenly;
      flex-wrap: wrap;
  }
 
- .item {
+.item {
     height: 180px;
     width: 180px;
     padding: 10px;
@@ -80,7 +141,7 @@ nav {
     align-content: center;
  }
 
- .title {
+.title {
     display: flex;
     flex-wrap: nowrap;
     padding-top: 5px;
@@ -89,17 +150,37 @@ nav {
 footer {
     background-color: lightgrey;
     width: 100vw;
-    height: 125px;
-    padding: 5px;
+    height: 150px;
     text-align: center;
+    display: flex;
+    flex-flow: column nowrap;
+    justify-content: center;
 }
 
-.links {
-    margin-top:10px;
+.footer {
+    height: 100px;
+    display: flex;
+    flex-flow: column nowrap;
+    justify-content: space-evenly;
+    align-items: center;
 }
+
+footer button {
+    width: 100px;
+}
+
 .links  a{
     text-decoration: none;
     color: black;
 }
 
+/*Media Queries*/
+/*Media Queries for Max-Width 800px*/
+@media(max-width: 800px) {
 
+} 
+
+/*Media Queries for Max-Width 500px*/
+@media(max-width: 500px) {
+
+}
